--- a/index.html
+++ b/index.html
@@ -13,57 +13,138 @@
 
   <div class="wrapper">
 
-    <header>
+    <header class="header">
+
       <div class="header-logo">
-        <img src="./assets/img/logo.png" alt="">
+        <img src="./assets/img/logo.png" alt="#">
       </div>
+
+      <nav class="menu">
+        <ul class="menu-list">
+          <li class="menu-list__item -style-active"><a>HOME</a></li>
+          <li class="menu-list__item"><a>PRODUCTS</a></li>
+          <li class="menu-list__item"><a>F.A.Q.</a></li>
+          <li class="menu-list__item"><a>COMPANY</a></li>
+          <li class="menu-list__item"><a>ABOUT</a></li>
+          <li class="menu-list__item"><a>CONTACT</a></li>
+        </ul>
+      </nav>
+
     </header>
 
+    <div class="container">
+
     <main class="main">
-      <div class="slider">
+      <h2>Lorem Ipsum Dolor...</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas aliquet velit pretium eget.</p>
+      <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum est massa, varius eget placerat non, laoreet nec erat. Suspendisse potenti. Donec molestie porta mauris quis venenatis. Aliquam quis leo est, vel blandit turpis. Quisque sed metus diam, iaculis cursus nulla.</p>
+      <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum est massa, varius eget placerat non, laoreet nec erat. Suspendisse potenti. Donec molestie porta mauris quis venenatis. Aliquam quis leo est, vel blandit turpis. Quisque sed metus diam, iaculis cursus nulla.</p>
+    </main>
 
-        <div class="slides">
-          <div class="slide active">
-            <img src="./assets/img/carousel-icon.png" alt="#">
-            <div class="slide-description">
-              <h2>Lorem, ipsum dolor...</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas aliquet velit pretium eget.</p>
-            </div>
-          </div>
+    <!-- <div class="slider">
 
-          <div class="slide">
-            <img src="./assets/img/carousel-icon.png" alt="#">
-            <div class="slide-description">
-              <h2>Slide 2</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque distinctio enim facere, fuga labore maiores quas quia quisquam reprehenderit saepe ullam ut velit. Aperiam delectus dolore esse molestiae reiciendis!</p>
-            </div>
-          </div>
-
-          <div class="slide">
-            <img src="./assets/img/carousel-icon.png" alt="#">
-            <div class="slide-description">
-              <h2>Slide 3</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam asperiores aut consectetur consequuntur debitis, deserunt ducimus, eveniet fuga fugiat inventore nam odit placeat porro sint tempore temporibus vero voluptas!</p>
-            </div>
+      <div class="slides">
+        <div class="slide active">
+          <img src="./assets/img/carousel-icon.png" alt="#">
+          <div class="slide-description">
+            <h2>Lorem, ipsum dolor...</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas aliquet velit pretium eget.</p>
           </div>
         </div>
 
-        <div class="controls">
-          <span class="prev">
-            prev
-          </span>
-          <span class="next">
-            next
-          </span>
-
+        <div class="slide">
+          <img src="./assets/img/carousel-icon.png" alt="#">
+          <div class="slide-description">
+            <h2>Slide 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque distinctio enim facere, fuga labore maiores quas quia quisquam reprehenderit saepe ullam ut velit. Aperiam delectus dolore esse molestiae reiciendis!</p>
+          </div>
         </div>
+
+        <div class="slide">
+          <img src="./assets/img/carousel-icon.png" alt="#">
+          <div class="slide-description">
+            <h2>Slide 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam asperiores aut consectetur consequuntur debitis, deserunt ducimus, eveniet fuga fugiat inventore nam odit placeat porro sint tempore temporibus vero voluptas!</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="controls">
+        <span class="prev">
+          prev
+        </span>
+        <span class="next">
+          next
+        </span>
 
       </div>
 
+    </div> -->
+    
+    <aside class="left-sidebar">
+      <h2>Products...</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam erat volutpat.</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ul>
+    </aside>
 
-    </main>
+    <aside class="bottom-sidebar">
+
+      <div class="bottom-sidebar__left">
+        <img src="./assets/img/clock-icon.png" alt="#">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam erat volutpat.</p>
+      </div>
+
+      <div class="bottom-sidebar__left">
+        <img src="./assets/img/coffee-icon.png" alt="#">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam erat volutpat.</p>
+      </div>
+
+    </aside>
+
+    </div>
 
   </div>
+
+  <footer class="footer">
+    <div class="wrapper">
+
+      <div class="footer-left">
+        <div class="footer-left__img">
+          <img src="./assets/img/twitter-icon.png" alt="#">
+        </div>
+        <div class="footer-left__description">
+          <span>Twitter</span>
+          <span>Follow Us</span>
+        </div>
+        <div class="footer-left__post">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <span>Posted 4 Days Ago</span>
+        </div>
+      </div>
+
+      <div class="footer-right">
+
+        <nav class="menu">
+          <ul class="menu-list">
+            <li class="menu-list__item -style-active"><a>HOME</a></li>
+            <li class="menu-list__item"><a>PRODUCTS</a></li>
+            <li class="menu-list__item"><a>F.A.Q.</a></li>
+            <li class="menu-list__item"><a>COMPANY</a></li>
+            <li class="menu-list__item"><a>ABOUT</a></li>
+            <li class="menu-list__item"><a>CONTACT</a></li>
+          </ul>
+        </nav>
+        
+      </div>
+
+    </div>
+  </footer>
 
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
