main template structure ready

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2>Lorem Ipsum Dolor...</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas aliquet velit pretium eget.</p>
       <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum est massa, varius eget placerat non, laoreet nec erat. Suspendisse potenti. Donec molestie porta mauris quis venenatis. Aliquam quis leo est, vel blandit turpis. Quisque sed metus diam, iaculis cursus nulla.</p>
-      <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum est massa, varius eget placerat non, laoreet nec erat. Suspendisse potenti. Donec molestie porta mauris quis venenatis. Aliquam quis leo est, vel blandit turpis. Quisque sed metus diam, iaculis cursus nulla.</p>
+      <p>Cum sociis natoque penatibus et magnis dis parturient montes, <i>nascetur ridiculus mus. Vestibulum est massa, varius eget placerat non, laoreet nec erat. Suspendisse potenti.</i>Donec molestie porta mauris quis venenatis. Aliquam quis leo est, vel blandit turpis. Quisque sed metus diam, iaculis cursus nulla.</p>
       </main>
 
       <div class="slider">
@@ -139,6 +139,9 @@
             <li class="menu-list__item"><a>CONTACT</a></li>
           </ul>
         </nav>
+        <div class="footer-right__logo">
+          <a href="#"><img src="./assets/img/logo.png" alt="#"></a>
+        </div>
       </div>
 
     </div>
