--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
       </div>
 
       <nav class="menu">
-        <ul class="menu-list">
-          <li class="menu-list__item -style-active"><a>HOME</a></li>
-          <li class="menu-list__item"><a>PRODUCTS</a></li>
-          <li class="menu-list__item"><a>F.A.Q.</a></li>
-          <li class="menu-list__item"><a>COMPANY</a></li>
-          <li class="menu-list__item"><a>ABOUT</a></li>
-          <li class="menu-list__item"><a>CONTACT</a></li>
+        <div class="menu__hamburger">
+          <div class="menu__hamburger-row"></div>
+          <div class="menu__hamburger-row"></div>
+          <div class="menu__hamburger-row"></div>
+        </div>
+        <ul class="menu__list">
+          <li class="menu__list-item -style-active"><a href="#">HOME</a></li>
+          <li class="menu__list-item"><a>PRODUCTS</a></li>
+          <li class="menu__list-item"><a>F.A.Q.</a></li>
+          <li class="menu__list-item"><a>COMPANY</a></li>
+          <li class="menu__list-item"><a>ABOUT</a></li>
+          <li class="menu__list-item"><a>CONTACT</a></li>
         </ul>
       </nav>
 
@@ -130,13 +135,13 @@
       <div class="footer-right">
         
         <nav class="menu">
-          <ul class="menu-list">
-            <li class="menu-list__item -style-active"><a>HOME</a></li>
-            <li class="menu-list__item"><a>PRODUCTS</a></li>
-            <li class="menu-list__item"><a>F.A.Q.</a></li>
-            <li class="menu-list__item"><a>COMPANY</a></li>
-            <li class="menu-list__item"><a>ABOUT</a></li>
-            <li class="menu-list__item"><a>CONTACT</a></li>
+          <ul class="menu__list">
+            <li class="menu__list-item -style-active"><a href="#">HOME</a></li>
+            <li class="menu__list-item"><a>PRODUCTS</a></li>
+            <li class="menu__list-item"><a>F.A.Q.</a></li>
+            <li class="menu__list-item"><a>COMPANY</a></li>
+            <li class="menu__list-item"><a>ABOUT</a></li>
+            <li class="menu__list-item"><a>CONTACT</a></li>
           </ul>
         </nav>
         <div class="footer-right__logo">
