--- a/index.html
+++ b/index.html
@@ -45,39 +45,39 @@
       <p>Cum sociis natoque penatibus et magnis dis parturient montes, <i>nascetur ridiculus mus. Vestibulum est massa, varius eget placerat non, laoreet nec erat. Suspendisse potenti.</i>Donec molestie porta mauris quis venenatis. Aliquam quis leo est, vel blandit turpis. Quisque sed metus diam, iaculis cursus nulla.</p>
       </main>
 
-      <div class="slider">
-        <div class="slides">
+      <div class="carousel">
+        <div class="carousel-slides">
 
-          <div class="slide active">
-            <div class="slide-image"><img src="./assets/img/carousel-icon.png" alt="#"></div>
-            <div class="slide-description">
+          <div class="carousel-slide active">
+            <div class="carousel-slide__image"><img src="./assets/img/carousel-icon.png" alt="#"></div>
+            <div class="carousel-slide__description">
               <h3>Lorem, ipsum dolor...</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas aliquet velit pretium eget.</p>
             </div>
           </div>
 
-          <div class="slide">
-            <div class="slide-image"><img src="./assets/img/carousel-icon.png" alt="#"></div>
-            <div class="slide-description">
+          <div class="carousel-slide">
+            <div class="carousel-slide__image"><img src="./assets/img/carousel-icon.png" alt="#"></div>
+            <div class="carousel-slide__description">
               <h3>Slide 2</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque distinctio enim facere, fuga labore maiores quas quia quisquam reprehenderit saepe ullam ut velit. Aperiam delectus dolore esse molestiae reiciendis!</p>
             </div>
           </div>
 
-          <div class="slide">
-            <div class="slide-image"><img src="./assets/img/carousel-icon.png" alt="#"></div>
-            <div class="slide-description">
+          <div class="carousel-slide">
+            <div class="carousel-slide__image"><img src="./assets/img/carousel-icon.png" alt="#"></div>
+            <div class="carousel-slide__description">
               <h3>Slide 3</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam asperiores aut consectetur consequuntur debitis, deserunt ducimus, eveniet fuga fugiat inventore nam odit placeat porro sint tempore temporibus vero voluptas!</p>
             </div>
           </div>
         </div>
 
-        <div class="controls">
-          <a class="prev slider-control">
+        <div class="carousel-controls">
+          <a class="prev carousel-control">
             <img src="./assets/img/carousel-arrow.png" alt="#">
           </a>
-          <a class="next slider-control">
+          <a class="next carousel-control">
             <img src="./assets/img/carousel-arrow.png" alt="#">
           </a>
   
